--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="top-banner">
                 <div class="top-banner-text">
                     <h1>Conmebol Copa America 2021</h1>
-                    <a class="link-button" target="_blank" href="https://www.livesoccertv.com/">Watch Live <i
+                    <a class="link-button" target="_blank" href="https://www.footem.site/">Watch Live <i
                             class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="top-banner-image">
