--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- Top Navigation Ends -->
             <div class="top-banner">
                 <div class="top-banner-text">
-                    <h1>Conmebol Copa America 2021</h1>
+                    <h1>FOOTEM - FOOTBALL IN EVERY MINUTE!</h1>
                     <a class="link-button" target="_blank" href="https://www.footem.site/">Watch Live <i
                             class="fas fa-arrow-right"></i></a>
                 </div>
@@ -325,8 +325,7 @@
             <a target="_blank" href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
             <a target="_blank" href="https://www.linkedin.com/signup"><i class="fab fa-linkedin"></i></a>
         </div>
-        <p>Copyright <i class="far fa-copyright"></i> Website developed by Saalim Shadman, A Computer Science Student at
-            RMIT University Australia</p>
+        <p>Copyright <i class="far fa-copyright"></i> Footem - 2022</p>
     </footer>
     <!-- Footer Section Ends -->
 </body>
