--- a/premier-league.html
+++ b/premier-league.html
@@ -49,151 +49,12 @@
       <iframe frameborder="0"  scrolling="yes" width="100%" height="800" src="https://www.fctables.com/england/premier-league/iframe/?type=table&lang_id=2&country=67&template=10&team=180231&timezone=Asia/Kolkata&time=12&po=1&ma=1&wi=1&dr=1&los=1&gf=0&ga=0&gd=1&pts=1&ng=0&form=0&width=520&height=700&font=Arial&fs=13&lh=34&bg=FFFFFF&fc=333333&logo=1&tlink=0&ths=1&thb=1&thba=FFFFFF&thc=000000&bc=dddddd&hob=f5f5f5&hobc=ebe7e7&lc=333333&sh=0&hfb=1&hbc=3bafda&hfc=000000"></iframe><div style="text-align:center;"></div>
 
       
-        <!-- Players Article Section Starts -->
-        <section id="players" class="players">
-            <article class="player">
-                <img src="images/players/player-1.png" alt="">
-                <div class="player-info">
-                    <h3>Neymar Jr</h3>
-                    <p>Football players are athletes who play football professionally. It should be noted that while
-                        some parts of the world use the word “football” to describe soccer, actual football refers to
-                        the American version of the sport. </p>
-                    <a class="link-button" href="">Read More <i class="fas fa-angle-double-right"></i></a>
-                </div>
-            </article>
-            <article class="player">
-                <img src="images/players/player-2.png" alt="">
-                <div class="player-info">
-                    <h3>Lionel Messi</h3>
-                    <p>Football players are athletes who play football professionally. It should be noted that while
-                        some parts of the world use the word “football” to describe soccer, actual football refers to
-                        the American version of the sport. </p>
-                    <a class="link-button" href="">Read More <i class="fas fa-angle-double-right"></i></a>
-                </div>
-            </article>
-            <article class="player">
-                <img src="images/players/player-3.png" alt="">
-                <div class="player-info">
-                    <h3>Cristiano Ronaldo</h3>
-                    <p>Football players are athletes who play football professionally. It should be noted that while
-                        some parts of the world use the word “football” to describe soccer, actual football refers to
-                        the American version of the sport. </p>
-                    <a class="link-button" href="">Read More <i class="fas fa-angle-double-right"></i></a>
-                </div>
-            </article>
-            <article class="player">
-                <img src="images/players/player-4.png" alt="">
-                <div class="player-info">
-                    <h3>Paulo Dybala</h3>
-                    <p>Football players are athletes who play football professionally. It should be noted that while
-                        some parts of the world use the word “football” to describe soccer, actual football refers to
-                        the American version of the sport. </p>
-                    <a class="link-button" href="">Read More <i class="fas fa-angle-double-right"></i></a>
-                </div>
-            </article>
-            <article class="player">
-                <img src="images/players/player-5.png" alt="">
-                <div class="player-info">
-                    <h3>Mesut Ozil</h3>
-                    <p>Football players are athletes who play football professionally. It should be noted that while
-                        some parts of the world use the word “football” to describe soccer, actual football refers to
-                        the American version of the sport. </p>
-                    <a class="link-button" href="">Read More <i class="fas fa-angle-double-right"></i></a>
-                </div>
-            </article>
-            <article class="player">
-                <img src="images/players/player-6.png" alt="">
-                <div class="player-info">
-                    <h3>Mauro Icardi</h3>
-                    <p>Football players are athletes who play football professionally. It should be noted that while
-                        some parts of the world use the word “football” to describe soccer, actual football refers to
-                        the American version of the sport. </p>
-                    <a class="link-button" href="">Read More <i class="fas fa-angle-double-right"></i></a>
-                </div>
-            </article>
-            <article class="player">
-                <img src="images/players/player-7.png" alt="">
-                <div class="player-info">
-                    <h3>Di Maria</h3>
-                    <p>Football players are athletes who play football professionally. It should be noted that while
-                        some parts of the world use the word “football” to describe soccer, actual football refers to
-                        the American version of the sport. </p>
-                    <a class="link-button" href="">Read More <i class="fas fa-angle-double-right"></i></a>
-                </div>
-            </article>
-            <article class="player">
-                <img src="images/players/player-8.png" alt="">
-                <div class="player-info">
-                    <h3>Kylian Mbappé</h3>
-                    <p>Football players are athletes who play football professionally. It should be noted that while
-                        some parts of the world use the word “football” to describe soccer, actual football refers to
-                        the American version of the sport. </p>
-                    <a class="link-button" href="">Read More <i class="fas fa-angle-double-right"></i></a>
-                </div>
-            </article>
-            <article class="player">
-                <img src="images/players/player-9.png" alt="">
-                <div class="player-info">
-                    <h3>Mohamed Salah</h3>
-                    <p>Football players are athletes who play football professionally. It should be noted that while
-                        some parts of the world use the word “football” to describe soccer, actual football refers to
-                        the American version of the sport. </p>
-                    <a class="link-button" href="">Read More <i class="fas fa-angle-double-right"></i></a>
-                </div>
-            </article>
-            <article class="player">
-                <img src="images/players/player-10.png" alt="">
-                <div class="player-info">
-                    <h3>Harry Kane</h3>
-                    <p>Football players are athletes who play football professionally. It should be noted that while
-                        some parts of the world use the word “football” to describe soccer, actual football refers to
-                        the American version of the sport. </p>
-                    <a class="link-button" href="">Read More <i class="fas fa-angle-double-right"></i></a>
-                </div>
-            </article>
-            <article class="player">
-                <img src="images/players/player-11.png" alt="">
-                <div class="player-info">
-                    <h3>Kevin De Bruyne</h3>
-                    <p>Football players are athletes who play football professionally. It should be noted that while
-                        some parts of the world use the word “football” to describe soccer, actual football refers to
-                        the American version of the sport. </p>
-                    <a class="link-button" href="">Read More <i class="fas fa-angle-double-right"></i></a>
-                </div>
-            </article>
-            <article class="player">
-                <img src="images/players/player-12.png" alt="">
-                <div class="player-info">
-                    <h3>Philippe Coutinho</h3>
-                    <p>Football players are athletes who play football professionally. It should be noted that while
-                        some parts of the world use the word “football” to describe soccer, actual football refers to
-                        the American version of the sport. </p>
-                    <a class="link-button" href="">Read More <i class="fas fa-angle-double-right"></i></a>
-                </div>
-            </article>
-        </section>
-        <!-- Players Article Section Ends -->
-        <!-- Football Updates Section Starts -->
-        <section>
-            <div id="trending" class="football-updates">
-                <div class="updates-text">
-                    <h2>All Highlights Copa America 2021</h2>
-                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                        duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-                    <a class="link-button" target="_blank" href="https://www.youtube.com/watch?v=sDFr2Yzd-8s">Watch Now
-                        <i class="fas fa-arrow-right"></i></a>
-                </div>
-                <div class="updates-image">
-                    <img src="images/match.png" alt="">
-                </div>
-            </div>
-        </section>
-        <!-- Football Updates Section Ends -->
         <!-- Popular Highlights Section Starts -->
         <section id="highlights">
             <div class="highlights-header">
                 <h2>Popular Highlights</h2>
-                <p>Watch the best bits of the biggest live matches on SS Sports</p>
+             <iframe frameborder="0"  scrolling="yes" width="100%" height="800" src="https://www.fctables.com/england/premier-league/iframe/?type=table&lang_id=2&country=67&template=10&team=180231&timezone=Asia/Kolkata&time=12&po=1&ma=1&wi=1&dr=1&los=1&gf=0&ga=0&gd=1&pts=1&ng=0&form=0&width=520&height=700&font=Arial&fs=13&lh=34&bg=FFFFFF&fc=333333&logo=1&tlink=0&ths=1&thb=1&thba=FFFFFF&thc=000000&bc=dddddd&hob=f5f5f5&hobc=ebe7e7&lc=333333&sh=0&hfb=1&hbc=3bafda&hfc=000000"></iframe><div style="text-align:center;"></div>
+
             </div>
             <div class="highlights">
                 <div class="match">
