--- a/premier-league.html
+++ b/premier-league.html
@@ -142,31 +142,9 @@
                 <h3>Todays Matches</h3>
                 <a class="link-button" target="_blank" href="https://www.goal.com/en-in/live-scores">Live</a>
             </div>
-            <p>Live Football Scores, Fixtures & Results</p>
-            <div class="fixture-name">
-                <h3>UEFA CHAMPIONS LEAGUE</h3>
-                <div class="fixtures">
-                    <div class="fixture">
-                        <h4 id="orange-color" class="status">29'</h4>
-                        <p>Kairat 1 - 0 Maccabi Haifa</p>
-                    </div>
-                    <hr>
-                    <div class="fixture">
-                        <h4 class="status">21:00</h4>
-                        <p>Kairat 1 - 0 Maccabi Haifa</p>
-                    </div>
-                    <hr>
-                    <div class="fixture">
-                        <h4 class="status">23:00</h4>
-                        <p>Kairat 1 - 0 Maccabi Haifa</p>
-                    </div>
-                    <hr>
-                    <div class="fixture">
-                        <h4 class="status">00:00</h4>
-                        <p>Kairat 1 - 0 Maccabi Haifa</p>
-                    </div>
-                </div>
-            </div>
+           
+                                        <iframe frameborder="0"  scrolling="yes" width="100%" height="800" src="https://www.24.live/playerteam/billboard?billboard=2"></iframe><div style="text-align:center;"></div>
+
         </section>
         <!-- Match Fixture Ends -->
     </main>
